@@ -1,4 +1,5 @@
 debian/tmp/usr/include/yaz
+debian/tmp/usr/lib/pkgconfig/yaz.pc
 debian/tmp/usr/lib/libyaz*.a
 debian/tmp/usr/lib/libyaz*.so
 debian/tmp/usr/lib/libyaz*.la
