@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: YAZ
+Version: @VERSION@
+Description: YAZ library.
+Requires: libexslt
+Libs: -L${libdir} -lyaz
+Libs.private: @LIBS@
+Cflags: @YAZ_CONFIG_CFLAGS@
